--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -77,6 +77,15 @@
   margin-right: 24px;
 }
 
+@media screen and (max-width: 770px) and (min-width: 443px) {
+  .profile__info {
+    grid-template-areas:
+      "title button"
+      "description description";
+    grid-template-columns: 1fr auto;
+  }
+}
+
 @media screen and (max-width: 770px) {
   .profile {
     flex-direction: column;
@@ -103,17 +112,25 @@
 
 @media screen and (max-width: 450px) {
   .profile {
+    width: 282px;
+    height: 286px;
     justify-content: space-around;
-    padding-top: 42;
+    padding-top: 42px;
   }
+  .profile__info {
+    padding-top: 30px;
+  }
+
   .profile__title {
     font-size: 22px;
+    line-height: 26.63px;
   }
 
   .profile__description {
     font-size: 14px;
     line-height: 16.94px;
-    margin-bottom: 36px;
+    gap: 14px;
+    margin-bottom: 30px;
   }
 
   .profile__edit-button {
@@ -125,6 +142,7 @@
 
   .profile__add-button {
     width: 282px;
+    height: 50px;
   }
 
   .profile__image {
