--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,10 +7,9 @@
 
 .footer__copyright {
   color: #545454;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 67px;
+  margin: 67px auto 60px;
   font-size: 18px;
+  line-height: 21.78px;
 }
 
 @media screen and (max-width: 600px) {
