--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   font-family: Inter, Arial, Helvetica, sans-serif;
   background-color: black;
   color: white;
+  overflow-x: hidden;
 }
 
 .page__section {
