--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -77,18 +77,11 @@
   margin-right: 24px;
 }
 
-@media screen and (max-width: 770px) and (min-width: 443px) {
-  .profile__info {
-    grid-template-areas:
-      "title button"
-      "description description";
-    grid-template-columns: 1fr auto;
-  }
-}
-
 @media screen and (max-width: 770px) {
   .profile {
     flex-direction: column;
+    align-items: center;
+    overflow: hidden;
   }
 
   .profile__info {
@@ -96,12 +89,14 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    overflow: hidden;
   }
 
   .profile__description {
     width: 100%;
     text-align: center;
     margin-bottom: 40px;
+    overflow: hidden;
   }
 
   .profile__add-button {
@@ -110,15 +105,16 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 620px) {
   .profile {
     width: 282px;
     height: 286px;
-    justify-content: space-around;
+    justify-content: center;
     padding-top: 42px;
   }
   .profile__info {
     padding-top: 30px;
+    margin-right: 0;
   }
 
   .profile__title {
@@ -128,6 +124,7 @@
 
   .profile__description {
     font-size: 14px;
+    width: 282px;
     line-height: 16.94px;
     gap: 14px;
     margin-bottom: 30px;
@@ -143,6 +140,9 @@
   .profile__add-button {
     width: 282px;
     height: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    box-sizing: border-box;
   }
 
   .profile__image {
