--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -81,7 +81,10 @@
   .profile {
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    max-width: 282px;
+    height: 286px;
+    padding-top: 42px;
+    justify-content: space-between;
   }
 
   .profile__info {
@@ -90,44 +93,19 @@
     justify-content: center;
     width: 100%;
     overflow: hidden;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 40px;
-    overflow: hidden;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 620px) {
-  .profile {
-    width: 282px;
-    height: 286px;
-    justify-content: space-between;
-    padding-top: 42px;
-  }
-  .profile__info {
     padding-top: 30px;
     margin-right: 0;
   }
 
-  .profile__title {
-    font-size: 22px;
-    line-height: 26.63px;
+  .profile__image {
+    margin: 0;
+    min-width: auto;
   }
 
-  .profile__description {
-    font-size: 14px;
-    width: 282px;
-    line-height: 16.94px;
-    gap: 14px;
-    margin-bottom: 30px;
+  .profile__title {
+    max-width: 282px;
+    font-size: 22px;
+    line-height: 26.63px;
   }
 
   .profile__edit-button {
@@ -137,16 +115,20 @@
     justify-content: flex-end;
   }
 
+  .profile__description {
+    text-align: center;
+    font-size: 14px;
+    width: 282px;
+    line-height: 16.94px;
+    gap: 14px;
+    margin-bottom: 30px;
+  }
+
   .profile__add-button {
     width: 282px;
     height: 50px;
     min-height: 50px;
     max-height: 50px;
     box-sizing: border-box;
-  }
-
-  .profile__image {
-    margin: 0;
-    min-width: auto;
   }
 }
